--- a/src/main/webapp/ajoutCounsellor.xhtml
+++ b/src/main/webapp/ajoutCounsellor.xhtml
@@ -11,32 +11,77 @@
 
 
 	<ui:define name="content">
+
+		<div class="container">
+			<div class="col-md-12 col-lg-offset-2">
+				<div class="login-signup">
+					<div class="row">
+						<div class="col-md-8 nav-tab-holder"></div>
+					</div>
+
+					<div class="tab-content">
+						<div role="tabpanel" class="tab-pane active" id="home">
+							<div class="row">
+
+								<div class="col-md-8 mobile-pull">
+									<article role="login">
+									<h3 class="text-center">
+										<i class="fa fa-plus"></i>Ajouter un conseiller
+									</h3>
+									</article>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 		<div class="addCounsellor">
 			<h:form>
-				<fieldset id="fieldset">
+				<fieldset id="field">
+					<h:outputText id="requis" value="* champs requis" style="font-size:75%;" />
 					<legend>Création Conseiller</legend>
-					<h:panelGrid columns="2" cellpadding="5">
+					
+					<h:panelGrid columns="3" cellpadding="5">
 						<p:outputLabel value="Nom" for="nom" />
 						<p:inputText id="nom"
-							value="#{counsellorController.counsellor.lastName}" />
+							value="#{counsellorController.counsellor.lastName}"
+							required="true" validatorMessage="Nom non valable"
+							requiredMessage="Ce champ est obligatoire">
+							<f:validateRegex pattern="^[a-zA-Z0-9'àéèù._\s-]{2,32}$" />
+						</p:inputText>
+						<p:message for="nom" />
 
 						<p:outputLabel value="Prénom" for="prenom" />
 						<p:inputText id="prenom"
-							value="#{counsellorController.counsellor.firstName}" />
+							value="#{counsellorController.counsellor.firstName}"
+							required="true" validatorMessage="Prénom non valable"
+							requiredMessage="Ce champ est obligatoire">
+							<f:validateRegex pattern="^[a-zA-Z0-9'àéèù._\s-]{2,32}$" />
+						</p:inputText>
+						<p:message for="prenom" />
 
 						<p:outputLabel value="Identifiant" for="login" />
 						<p:inputText id="login"
-							value="#{counsellorController.counsellor.login}" />
+							value="#{counsellorController.counsellor.login}"
+							validatorMessage="Merci de rentrer un login sans espaces et sans accents">
+							<f:validateRegex pattern="^[a-zA-Z0-9'._-]{3,32}$" />
+						</p:inputText>
+						<p:message for="login" />
 
 
 						<p:outputLabel value="Mot de passe" for="password" />
 						<p:inputText id="password"
 							value="#{counsellorController.counsellor.password}"
 							type="password" />
+						<p:message for="password" />
 
 					</h:panelGrid>
+
 				</fieldset>
-				<p:commandButton value="Submit"
+				<p:commandButton value="Valider"
 					action="#{counsellorController.saveCounsellor}" />
 
 			</h:form>
