--- a/src/main/webapp/listCounsellors.xhtml
+++ b/src/main/webapp/listCounsellors.xhtml
@@ -10,6 +10,31 @@
 	template="/template/template.xhtml">
 
 	<ui:define name="content">
+	
+	<div class="container">
+				<div class="col-md-12 col-lg-offset-2">
+					<div class="login-signup">
+						<div class="row">
+							<div class="col-md-8 nav-tab-holder"></div>
+						</div>
+
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane active" id="home">
+								<div class="row">
+
+									<div class="col-md-8 mobile-pull">
+										<article role="login">
+										<h3 class="text-center">
+											<i class="fa fa-list"></i>Liste des conseillers
+										</h3>
+										</article>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		<h:form id="formClients">
 
@@ -31,7 +56,7 @@
 				</p:column>
 
 				<p:column headerText="Nom" sortBy="#{tempCounsellor.lastName}"
-					filterBy="#{tempCounsellor.lastName}" filterMatchMode="contains">>
+					filterBy="#{tempCounsellor.lastName}" filterMatchMode="contains">
 					<h:outputText value="#{tempCounsellor.lastName}" />
 				</p:column>
 
@@ -46,12 +71,12 @@
 <p:rowExpansion>
 					
 
-					<p:dataTable value="#{tempCounesllor.clients}" var="cli"
+					<p:dataTable value="#{tempCounsellor.clients}" var="cli"
 						id="accounts" emptyMessage="Ce conseiller n'a pas de clients"
 						style="width:600px">
 
 						<p:column headerText="Nom client"
-							sortBy="#{cli.lastName}">
+							sortBy="#{cli.lastName}" filterBy="#{cli.lastName}" filterMatchMode="contains">
 							<h:outputText value="#{cli.lastName}" />
 						</p:column>
 						
