--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,6 +10,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+
+
+<script src="https://use.fontawesome.com/11f152bf52.js"></script>
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script
@@ -20,6 +24,8 @@
 <title>Gestion securité</title>
 </head>
 <body>
+
+
 
 
 	<div class="container">
@@ -35,8 +41,9 @@
 
 							<div class="col-md-8 mobile-pull">
 								<article role="login">
+								<h3 class="text-center">ProxiBanque KPC</h3>
 								<h3 class="text-center">
-									<i class="fa fa-lock"></i>Connexion
+									<i class="fa fa-lock"></i> Connexion
 								</h3>
 
 								<form role="form" name="loginform" action="j_security_check"
