--- a/src/main/webapp/Statistics.xhtml
+++ b/src/main/webapp/Statistics.xhtml
@@ -11,7 +11,8 @@
 	<ui:define name="content">
 		<div class="stats">
 			
-<!-- 			<p:chart type="pie" ></p:chart> -->
+			<p:chart type="bar" model="#{counsellorController.barModel}"></p:chart>
+			
 			
 		</div>
 	</ui:define>
