--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -25,7 +25,8 @@
 </head>
 <body>
 
-
+	<img src="https://img1.lght.pics/9efd6f1ac9364d7789c16734f847a06d.png"
+		alt="ProxiBanque KPC" style="display: block; margin: auto;" />
 
 
 	<div class="container">
@@ -41,7 +42,7 @@
 
 							<div class="col-md-8 mobile-pull">
 								<article role="login">
-								<h3 class="text-center">ProxiBanque KPC</h3>
+
 								<h3 class="text-center">
 									<i class="fa fa-lock"></i> Connexion
 								</h3>
