--- a/src/main/webapp/bankTransfer.xhtml
+++ b/src/main/webapp/bankTransfer.xhtml
@@ -13,15 +13,18 @@
 
 
 
-			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" >
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 
 				<p:outputLabel for="clientSender"
-					value="Choix du cient et du compte émetteur : *" style="width:300px"/>
+					value="Choix du cient et du compte émetteur : *"
+					style="width:300px" />
 				<p:selectOneMenu id="clientSender" required="true"
 					value="#{accountController.numAccountSender}"
 					panelStyle="width:180px" effect="fade" style="width:250px"
-					filter="true" filterMatchMode="startsWith" >
-					<f:selectItem itemLabel="--Rechercher le client émetteur et le compte associé--" itemValue="" />
+					filter="true" filterMatchMode="startsWith">
+					<f:selectItem
+						itemLabel="--Rechercher le client émetteur et le compte associé--"
+						itemValue="" />
 					<f:selectItems value="#{accountController.bankAccounts}"
 						var="account" itemValue="#{account.accountNumber}"
 						itemLabel="#{account.client} / #{account}" />
@@ -29,23 +32,28 @@
 
 
 				<p:outputLabel for="clientReciever"
-					value="Choix du cient et du compte bénéficiaire : *"  style="width:300px"/>
+					value="Choix du cient et du compte bénéficiaire : *"
+					style="width:300px" />
 				<p:selectOneMenu id="clientReciever"
 					value="#{accountController.numAccountReciever}" required="true"
 					panelStyle="width:180px" effect="fade" style="width:250px"
 					filter="true" filterMatchMode="startsWith">
-					<f:selectItem itemLabel="--Rechercher le client bénéficiaire et le compte associé--" itemValue="" />
+					<f:selectItem
+						itemLabel="--Rechercher le client bénéficiaire et le compte associé--"
+						itemValue="" />
 					<f:selectItems value="#{accountController.bankAccounts}"
 						var="account" itemValue="#{account.accountNumber}"
 						itemLabel="#{account.client} / #{account}'" />
 				</p:selectOneMenu>
 
-				<p:outputLabel for="amount" value="Montant du virement : " style="width:250px"/>
-				<p:inputText id="amount" value="#{accountController.amount}" converterMessage="Test" >
-				<f:validateDoubleRange  minimum="0"/>
+				<p:outputLabel for="amount" value="Montant du virement : "
+					style="width:250px" />
+				<p:inputText id="amount" value="#{accountController.amount}"
+					converterMessage="Test">
+					<f:validateDoubleRange minimum="0" />
 				</p:inputText>
-				<p:commandButton id="validateTranfer" value="Valider le virement" 
-					action="#{accountController.transfer}"  />
+				<p:commandButton id="validateTranfer" value="Valider le virement"
+					action="#{accountController.transfer}" />
 
 
 
