--- a/src/main/webapp/Statistics.xhtml
+++ b/src/main/webapp/Statistics.xhtml
@@ -13,6 +13,7 @@
 			
 			<p:chart type="bar" model="#{counsellorController.barModel}"></p:chart>
 			
+			<p:chart type="pie" model="#{clientController.pieModel}"></p:chart>
 			
 		</div>
 	</ui:define>
