stats mise en page

--- a/src/main/webapp/Statistics.xhtml
+++ b/src/main/webapp/Statistics.xhtml
@@ -10,11 +10,15 @@
 
 	<ui:define name="content">
 		<div class="stats">
+			<fieldset id="field">
+				<p:chart type="bar" model="#{counsellorController.barModel}"></p:chart>
+			</fieldset>
 			
-			<p:chart type="bar" model="#{counsellorController.barModel}"></p:chart>
+			<br/>
 			
-			<p:chart type="pie" model="#{clientController.pieModel}"></p:chart>
-			
+			<fieldset id="field">
+				<p:chart type="pie" model="#{clientController.pieModel}"></p:chart>
+			</fieldset>
 		</div>
 	</ui:define>
 
