--- a/src/main/webapp/Statistics.xhtml
+++ b/src/main/webapp/Statistics.xhtml
@@ -6,7 +6,12 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" template="/template/template.xhtml">
 
-
+	<f:metadata>
+			<f:event type="preRenderView"
+				listener="#{counsellorController.refreshList()}" />
+				<f:event type="preRenderView"
+				listener="#{clientController.refreshList()}" />
+		</f:metadata>
 
 	<ui:define name="content">
 		<div class="stats">
