--- a/src/main/webapp/ajoutClient.xhtml
+++ b/src/main/webapp/ajoutClient.xhtml
@@ -101,7 +101,7 @@
 						</p:inputText>
 						<p:message for="streetNumber" />
 
-						<p:outputLabel value="Rue" for="streetName" />
+						<p:outputLabel value="Voie" for="streetName" />
 						<p:inputText id="streetName"
 							value="#{clientController.client.address.streetName}"
 							validatorMessage="Nom de voie non valable">
